--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <div class="uui-testimonial11_mask w-slider-mask">
               <div class="uui-testimonial11_slide w-slide">
                 <div data-w-id="1c612942-c046-d32c-b5c2-79b0f1529a65" class="w-layout-grid uui-testimonial11_content">
-                  <div class="uui-testimonial11_client-image-wrapper"><img src="/images/image-206.jpg" loading="lazy" sizes="(max-width: 1919px) 100vw, 1920px" srcset="/images/image-206-p-1080.jpeg 1080w, /images/image-206-p-1600.jpeg 1600w, /images/image-206.jpg 1920w" alt="Meeting" class="uui-testimonial11_client-image" /></div>
+                  <div class="uui-testimonial11_client-image-wrapper"><img src="/images/testimonial-1.jpg" loading="lazy" sizes="(max-width: 1919px) 100vw, 1920px" srcset="/images/testimonial-1.jpg 1080w, /images/testimonial-1.jpg 1600w, /images/testimonial-1.jpg 1920w" alt="testimonial image" class="uui-testimonial11_client-image" /></div>
                   <div id="w-node-_1c612942-c046-d32c-b5c2-79b0f1529a68-9547f1c8" class="uui-testimonial11_content-right">
                     <div class="uui-testimonial11_rating-wrapper">
                       <div class="uui-testimonial11_rating-icon w-embed"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -248,10 +248,10 @@
                           </g>
                         </svg></div>
                     </div>
-                    <h3 class="uui-heading-medium text-weight-medium">Untitled has saved us thousands of hours of work. We’re able to spin up projects and features faster.</h3>
+                    <h3 class="uui-heading-tiny">We were so fortunate to have found Mankaran when we moved to Toronto. As our Realtor, he helped us find the right house in the right neighborhood for the right price. He was patient as we traveled through Toronto to look at homes over several months and cautioned us about making unreasonable offers when we fell too quickly for overpriced homes. In short, he was always on our side working to make our house purchase as simple and successful as possible. The best part about working with Mankaran was that he was always more focused on answering our questions, giving us good advice, and finding homes that met our needs than he was on closing a deal. We would recommend him to anyone.</h3>
                     <div class="uui-testimonial11_client">
                       <div class="uui-testimonial11_client-info">
-                        <div class="uui-heading-tiny">Kelly Williams</div>
+                        <div class="uui-heading-tiny">(Name)</div>
                       </div>
                     </div>
                   </div>
@@ -259,7 +259,7 @@
               </div>
               <div class="uui-testimonial11_slide w-slide">
                 <div class="w-layout-grid uui-testimonial11_content">
-                  <div class="uui-testimonial11_client-image-wrapper"><img src="/images/image-202.jpg" loading="lazy" sizes="(max-width: 1919px) 100vw, 1920px" srcset="/images/image-202-p-1080.jpeg 1080w, /images/image-202-p-1600.jpeg 1600w, /images/image-202.jpg 1920w" alt="Woman looking at phone" class="uui-testimonial11_client-image" /></div>
+                  <div class="uui-testimonial11_client-image-wrapper"><img src="/images/testimonial-2.jpg" loading="lazy" sizes="(max-width: 1919px) 100vw, 1920px" srcset="/images/testimonial-2.jpg 1080w, /images/testimonial-2.jpg 1600w, /images/testimonial-2.jpg 1920w" alt="testimonial image" class="uui-testimonial11_client-image" /></div>
                   <div id="w-node-_1c612942-c046-d32c-b5c2-79b0f1529a7e-9547f1c8" class="uui-testimonial11_content-right">
                     <div class="uui-testimonial11_rating-wrapper">
                       <div class="uui-testimonial11_rating-icon w-embed"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -288,10 +288,10 @@
                           </g>
                         </svg></div>
                     </div>
-                    <h3 class="uui-heading-medium text-weight-medium">We’ve been using Untitled to kick start every new project and can’t imagine working without it.</h3>
+                    <h3 class="uui-heading-tiny">Working with Mankaran has been one of the best experiences in renting our apartment as newcomers to Canada! Oftentimes in the city you run into sleazy cut throat brokers who just want you to sign on the dotted-line! Mankaran is a notable exception. He genuinely gets to know you, is patient and is diligent throughout the whole renting process. He listened and answered every question we asked. Worked with our hectic schedule all with a smile. Mankaran was also very accommodating as we had to set up multiple viewings in the same day. He was in constant contact with us while he guided us through the application process and lease signing. He streamlined the process for us and made renting easy. The process was seamless and we finally have an apartment where we can see ourselves living in the long term. I will definitely recommend him to friends/ new immigrants looking to buy as well as rent. He was a true professional and will be my first call the next time I am in the market to buy or rent. Thank you so much Mankaran.</h3>
                     <div class="uui-testimonial11_client">
                       <div class="uui-testimonial11_client-info">
-                        <p class="uui-heading-tiny">Katherine Moss</p>
+                        <p class="uui-heading-tiny">(Name)</p>
                       </div>
                     </div>
                   </div>
