--- a/index.html
+++ b/index.html
@@ -71,71 +71,7 @@
       <h1 data-w-id="53dbe9f3-89e9-9b41-b83f-47dadad4315f" style="-webkit-transform:translate3d(0px, -25px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0px, -25px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0px, -25px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0px, -25px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="flheading">FEATURED LISTINGS</h1>
       <div class="featured-list-grid">
           <div class="flgrid1">
-<a href="/listing-1212.html" class="w-inline-block">
-            <div data-w-id="d528d3b3-1793-c3a7-bfba-918591986887" style="-webkit-transform:translate3d(0, -25px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -25px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -25px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -25px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="listingmain">
-                <h1 class="listingcity">BRAMPTON</h1>
-                <h1 class="listingpropertytype">condo</h1>
-                <img src="listings/1212/thumbnail.jpg" loading="lazy" alt="" class="listingimg" />
-                <div class="listingbottomblock">
-                    <div class="div-block-74">
-                        <div class="listingpropertyaddress">100 Dufay Road</div>
-                        <div class="listingpropertyprice">$2.00</div>
-                    </div>
-                    <div class="div-block-75">
-                        <img src="/images/bed.png" loading="lazy" alt="" class="image-48" />
-                        <h1 class="listingpropertybeds">4</h1>
-                        <img src="/images/bath.png" loading="lazy" alt="" class="image-49" />
-                        <h1 class="listingpropertybaths">4</h1>
-                        <img src="/images/garage.png" loading="lazy" alt="" class="image-50" />
-                        <h1 class="listingpropertygarages">4</h1>
-                    </div>
-                </div>
-            </div>
-        </a>
-    
-        <a href="/listing-1.html" class="w-inline-block">
-            <div data-w-id="24abb0d3-2135-600a-53be-95eaf847645b" style="-webkit-transform:translate3d(0, 25px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 25px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -25px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 25px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="listingmain">
-                <h1 class="listingcity">DFS</h1>
-                <h1 class="listingpropertytype">townhouse</h1>
-                <img src="listings/1/thumbnail.jpg" loading="lazy" alt="" class="listingimg" />
-                <div class="listingbottomblock">
-                    <div class="div-block-74">
-                        <div class="listingpropertyaddress">2323</div>
-                        <div class="listingpropertyprice">$324,345,345</div>
-                    </div>
-                    <div class="div-block-75">
-                        <img src="/images/bed.png" loading="lazy" alt="" class="image-48" />
-                        <h1 class="listingpropertybeds">12</h1>
-                        <img src="/images/bath.png" loading="lazy" alt="" class="image-49" />
-                        <h1 class="listingpropertybaths">2</h1>
-                        <img src="/images/garage.png" loading="lazy" alt="" class="image-50" />
-                        <h1 class="listingpropertygarages">1</h1>
-                    </div>
-                </div>
-            </div>
-        </a>
-    
-        <a href="/listing-123112.html" class="w-inline-block">
-            <div data-w-id="24abb0d3-2135-600a-53be-95eaf847645b" style="-webkit-transform:translate3d(0, 25px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 25px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -25px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 25px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="listingmain">
-                <h1 class="listingcity">WINDSOR</h1>
-                <h1 class="listingpropertytype">House</h1>
-                <img src="listings/123112/thumbnail.jpg" loading="lazy" alt="" class="listingimg" />
-                <div class="listingbottomblock">
-                    <div class="div-block-74">
-                        <div class="listingpropertyaddress">2832 Chippawa Road</div>
-                        <div class="listingpropertyprice">$785,999</div>
-                    </div>
-                    <div class="div-block-75">
-                        <img src="/images/bed.png" loading="lazy" alt="" class="image-48" />
-                        <h1 class="listingpropertybeds">4</h1>
-                        <img src="/images/bath.png" loading="lazy" alt="" class="image-49" />
-                        <h1 class="listingpropertybaths">3</h1>
-                        <img src="/images/garage.png" loading="lazy" alt="" class="image-50" />
-                        <h1 class="listingpropertygarages">2</h1>
-                    </div>
-                </div>
-            </div>
-        </a>
+<!-- No featured listings available -->
 <div class="flviewmoreblock">
               <a href="/listings.html" class="link-block w-inline-block">
                   <h1 data-w-id="da39661c-dcb7-b54a-9d23-5311433f7276" style="-webkit-transform:translate3d(88px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(88px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(88px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(88px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="viewmore">> VIEW MORE</h1>
