Update listings and generated pages

--- a/index.html
+++ b/index.html
@@ -71,27 +71,7 @@
       <h1 data-w-id="53dbe9f3-89e9-9b41-b83f-47dadad4315f" style="-webkit-transform:translate3d(0px, -25px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0px, -25px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0px, -25px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0px, -25px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="flheading">FEATURED LISTINGS</h1>
       <div class="featured-list-grid">
           <div class="flgrid1">
-<a href="/listing-X11918157.html" class="w-inline-block">
-            <div data-w-id="d528d3b3-1793-c3a7-bfba-918591986887" style="-webkit-transform:translate3d(0, -25px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -25px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -25px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -25px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="listingmain">
-                <h1 class="listingcity">NIAGARA FALLS</h1>
-                <h1 class="listingpropertytype">House</h1>
-                <img src="listings/X11918157/thumbnail.jpg" loading="lazy" alt="" class="listingimg" />
-                <div class="listingbottomblock">
-                    <div class="div-block-74">
-                        <div class="listingpropertyaddress">6462 Barker Street</div>
-                        <div class="listingpropertyprice">$559,900</div>
-                    </div>
-                    <div class="div-block-75">
-                        <img src="/images/bed.png" loading="lazy" alt="" class="image-48" />
-                        <h1 class="listingpropertybeds">6</h1>
-                        <img src="/images/bath.png" loading="lazy" alt="" class="image-49" />
-                        <h1 class="listingpropertybaths">4</h1>
-                        <img src="/images/garage.png" loading="lazy" alt="" class="image-50" />
-                        <h1 class="listingpropertygarages">0</h1>
-                    </div>
-                </div>
-            </div>
-        </a>
+<!-- No featured listings available -->
 <div class="flviewmoreblock">
               <a href="/listings.html" class="link-block w-inline-block">
                   <h1 data-w-id="da39661c-dcb7-b54a-9d23-5311433f7276" style="-webkit-transform:translate3d(88px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(88px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(88px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(88px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="viewmore">> VIEW MORE</h1>
