--- a/contact-us.html
+++ b/contact-us.html
@@ -71,8 +71,7 @@
               <h1 class="heading-61"><a href="pre-construction.html" class="link-18">PRE-CONSTRUCTION</a></h1>
               <h1 class="heading-70"><a href="contact-us.html" class="link-19">CONTACT</a></h1>
               <div class="text-block-38"><strong class="bold-text-4">📞 647-XXX-XXX</strong></div>
-              <div class="text-block-38"><strong class="bold-text-4">✉️ me@realtormks.com</strong></div>
-              <div class="text-block-38"><strong class="bold-text-4">📍 53 Lockcentipede Road</strong></div>
+              <div class="text-block-38"><strong class="bold-text-4">✉️ realtormks@gmail.com</strong></div>
           </div>
       </div>
   </div>
@@ -89,8 +88,8 @@
               <div class="w-layout-hflex rt-footer-address-flex"><img width="17.5" height="21" alt="icon" src="/images/mask-20group-20-4-.svg" class="rt-image-height-auto-2" />
                 <p class="rt-body-font-color">Brampton, Ontario CA</p>
               </div>
-              <div class="w-layout-hflex rt-footer-address-flex"><img width="20" height="16" alt="icon" src="/images/mask-20group-20-6-.svg" class="rt-image-height-auto-2" /><a role="link" href="mailto:info@example.com" class="rt-body-font-color">info@example.com</a></div>
-              <div class="w-layout-hflex rt-footer-address-flex"><img width="20" height="19" alt="icon" src="/images/mask-20group-20-5-.svg" class="rt-image-height-auto-2" /><a role="link" href="tel:(888)1234567" class="rt-body-font-color">(888)1234567</a></div>
+              <div class="w-layout-hflex rt-footer-address-flex"><img width="20" height="16" alt="icon" src="/images/mask-20group-20-6-.svg" class="rt-image-height-auto-2" /><a role="link" href="mailto:info@example.com" class="rt-body-font-color">realtormks@gmail.com</a></div>
+              <div class="w-layout-hflex rt-footer-address-flex"><img width="20" height="19" alt="icon" src="/images/mask-20group-20-5-.svg" class="rt-image-height-auto-2" /><a role="link" href="tel:(888)1234567" class="rt-body-font-color">-</a></div>
             </div>
           </div>
           <div class="w-layout-hflex rt-footer-social-flex"><a role="link" href="https://twitter.com" target="_blank" class="rt-no-underline w-inline-block"><img width="18.5" height="19" alt="Icon" src="/images/vector-20-21-.svg" class="rt-image-height-auto-2" /></a><a role="link" href="https://www.instagram.com/" target="_blank" class="rt-no-underline w-inline-block"><img width="20.5" height="21" alt="Icon" src="/images/vector-20-20-.svg" class="rt-image-height-auto-2" /></a><a role="link" href="https://in.linkedin.com" target="_blank" class="rt-no-underline w-inline-block"><img width="20" height="21" alt="Icon" src="/images/linkedin-20-1-.svg" class="rt-image-height-auto-2" /></a></div>
