--- a/homeevaluation.html
+++ b/homeevaluation.html
@@ -71,8 +71,7 @@
               <h1 class="heading-61"><a href="pre-construction.html" class="link-18">PRE-CONSTRUCTION</a></h1>
               <h1 class="heading-70"><a href="contact-us.html" class="link-19">CONTACT</a></h1>
               <div class="text-block-38"><strong class="bold-text-4">📞 647-XXX-XXX</strong></div>
-              <div class="text-block-38"><strong class="bold-text-4">✉️ me@realtormks.com</strong></div>
-              <div class="text-block-38"><strong class="bold-text-4">📍 53 Lockcentipede Road</strong></div>
+              <div class="text-block-38"><strong class="bold-text-4">✉️ realtormks@gmail.com</strong></div>
           </div>
       </div>
   </div>
@@ -128,7 +127,6 @@
               <a href="#" class="uui-footer07_logo-link w-nav-brand">
                 <div class="uui-logo_component">
                   <img src="/images/logo4.png" loading="lazy" alt="RealtorMKS Logo" class="uui-logo_logotype" />
-                  <img src="/images/untitled-ui-logo.png" loading="lazy" alt="Logo" class="uui-logo_image" />
                 </div>
               </a>
               <div class="w-layout-grid uui-footer07_link-list">
