Update listings and generated pages

--- a/listing-X11918157.html
+++ b/listing-X11918157.html
@@ -288,8 +288,7 @@
               <h1 class="heading-61"><a href="pre-construction.html" class="link-18">PRE-CONSTRUCTION</a></h1>
               <h1 class="heading-70"><a href="contact-us.html" class="link-19">CONTACT</a></h1>
               <div class="text-block-38"><strong class="bold-text-4">📞 647-XXX-XXX</strong></div>
-              <div class="text-block-38"><strong class="bold-text-4">✉️ me@realtormks.com</strong></div>
-              <div class="text-block-38"><strong class="bold-text-4">📍 53 Lockcentipede Road</strong></div>
+              <div class="text-block-38"><strong class="bold-text-4">✉️ realtormks@gmail.com</strong></div>
           </div>
       </div>
   </div>
@@ -311,6 +310,7 @@
         <h1 class="heading-41 listcityprovpin">NIAGARA FALLS, ON L2G 1Y7</h1>
         <h1 class="heading-40 listprice" style="margin-left: 10px;">$559,900</h1>
         <h1 class="heading-42 listlistingno">LISTING #X11918157</h1>
+        <h1 class="heading-42 listlistingprovider">COURTESY OF #Quantum Team Realty</h1>
         <div class="div-block-80">
             <h1 class="heading-43">BEDS</h1>
             <h1 class="heading-44 listbeds">6</h1>
@@ -319,7 +319,7 @@
             <h1 class="heading-47">GARAGE</h1>
             <h1 class="heading-48 listgarage">0</h1>
             <h1 class="heading-49">SQFT</h1>
-            <h1 class="heading-50 listsqft">1500</h1>
+            <h1 class="heading-50 listsqft">1000-1500</h1>
         </div>
         <a href="#" class="button-3 hb2button listingreqdetbtn w-button">REQUEST DETAILS</a>
         <a href="#" class="button-3 hb2button listingschedviewbtn w-button">SCHEDULE A SHOWING</a>
@@ -464,7 +464,7 @@
               <option value="4:00 PM">4:00 PM</option>
               <option value="5:00 PM">5:00 PM</option>
           </select>
-          <input type="date" name="preferredDate" required min="2025-04-09">
+          <input type="date" name="preferredDate" required min="2025-04-10">
           <button type="submit">Schedule Showing</button>
           <div class="modal-success">Showing scheduled successfully!</div>
           <div class="modal-error">Failed to schedule. Try again.</div>
@@ -557,7 +557,7 @@
     </script>
 
     <script>
-      const photos = ["listings/X11918157/thumbnail.jpg", ...["listings/X11918157/x11918157_24.jpg", "listings/X11918157/x11918157_23.jpg", "listings/X11918157/x11918157_22.jpg", "listings/X11918157/x11918157_21.jpg", "listings/X11918157/x11918157_20.jpg", "listings/X11918157/x11918157_19.jpg", "listings/X11918157/x11918157_18.jpg", "listings/X11918157/x11918157_17.jpg", "listings/X11918157/x11918157_16.jpg", "listings/X11918157/x11918157_15.jpg", "listings/X11918157/x11918157_14.jpg", "listings/X11918157/x11918157_13.jpg", "listings/X11918157/x11918157_12.jpg", "listings/X11918157/x11918157_11.jpg", "listings/X11918157/x11918157_10.jpg", "listings/X11918157/x11918157_9.jpg", "listings/X11918157/x11918157_8.jpg", "listings/X11918157/x11918157_7.jpg", "listings/X11918157/x11918157_6.jpg", "listings/X11918157/x11918157_5.jpg", "listings/X11918157/x11918157_4.jpg", "listings/X11918157/x11918157_3.jpg", "listings/X11918157/x11918157_1.jpg"]]; // Include main thumbnail in the array
+      const photos = ["listings/X11918157/thumbnail.jpg", ...["listings/X11918157/3-2-1024x650.jpg", "listings/X11918157/x11918157_23.jpg", "listings/X11918157/x11918157_22.jpg", "listings/X11918157/x11918157_21.jpg", "listings/X11918157/x11918157_20.jpg", "listings/X11918157/x11918157_19.jpg", "listings/X11918157/x11918157_18.jpg", "listings/X11918157/x11918157_17.jpg", "listings/X11918157/x11918157_16.jpg", "listings/X11918157/x11918157_15.jpg", "listings/X11918157/x11918157_14.jpg", "listings/X11918157/x11918157_13.jpg", "listings/X11918157/x11918157_12.jpg", "listings/X11918157/x11918157_11.jpg", "listings/X11918157/x11918157_10.jpg", "listings/X11918157/x11918157_9.jpg", "listings/X11918157/x11918157_8.jpg", "listings/X11918157/x11918157_7.jpg", "listings/X11918157/x11918157_6.jpg", "listings/X11918157/x11918157_5.jpg", "listings/X11918157/x11918157_4.jpg", "listings/X11918157/x11918157_3.jpg", "listings/X11918157/x11918157_1.jpg"]]; // Include main thumbnail in the array
       const mainImage = document.getElementById('mainImage');
       const thumbnailContainer = document.getElementById('thumbnailContainer');
       let currentIndex = 0;
