--- a/listing.html
+++ b/listing.html
@@ -288,8 +288,7 @@
               <h1 class="heading-61"><a href="pre-construction.html" class="link-18">PRE-CONSTRUCTION</a></h1>
               <h1 class="heading-70"><a href="contact-us.html" class="link-19">CONTACT</a></h1>
               <div class="text-block-38"><strong class="bold-text-4">📞 647-XXX-XXX</strong></div>
-              <div class="text-block-38"><strong class="bold-text-4">✉️ me@realtormks.com</strong></div>
-              <div class="text-block-38"><strong class="bold-text-4">📍 53 Lockcentipede Road</strong></div>
+              <div class="text-block-38"><strong class="bold-text-4">✉️ realtormks@gmail.com</strong></div>
           </div>
       </div>
   </div>
@@ -311,6 +310,7 @@
         <h1 class="heading-41 listcityprovpin">{city}, ON {postalCode}</h1>
         <h1 class="heading-40 listprice" style="margin-left: 10px;">{price}</h1>
         <h1 class="heading-42 listlistingno">LISTING #{listingNo}</h1>
+        <h1 class="heading-42 listlistingprovider">COURTESY OF #{listingProvider}</h1>
         <div class="div-block-80">
             <h1 class="heading-43">BEDS</h1>
             <h1 class="heading-44 listbeds">{beds}</h1>
