--- a/listing-X11918157.html
+++ b/listing-X11918157.html
@@ -310,7 +310,7 @@
         <h1 class="heading-41 listcityprovpin">NIAGARA FALLS, ON L2G 1Y7</h1>
         <h1 class="heading-40 listprice" style="margin-left: 10px;">$559,900</h1>
         <h1 class="heading-42 listlistingno">LISTING #X11918157</h1>
-        <h1 class="heading-42 listlistingprovider">COURTESY OF #Quantum Team Realty</h1>
+        <h1 class="heading-42 listlistingprovider">COURTESY OF Quantum Team Realty</h1>
         <div class="div-block-80">
             <h1 class="heading-43">BEDS</h1>
             <h1 class="heading-44 listbeds">6</h1>
