--- a/listing.html
+++ b/listing.html
@@ -310,7 +310,7 @@
         <h1 class="heading-41 listcityprovpin">{city}, ON {postalCode}</h1>
         <h1 class="heading-40 listprice" style="margin-left: 10px;">{price}</h1>
         <h1 class="heading-42 listlistingno">LISTING #{listingNo}</h1>
-        <h1 class="heading-42 listlistingprovider">COURTESY OF #{listingProvider}</h1>
+        <h1 class="heading-42 listlistingprovider">COURTESY OF {listingProvider}</h1>
         <div class="div-block-80">
             <h1 class="heading-43">BEDS</h1>
             <h1 class="heading-44 listbeds">{beds}</h1>
