--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
         n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
       }(window, document);
     </script>
-    <link href="/images/favicon.png" rel="shortcut icon" type="image/x-icon" />
-    <link href="/images/app-icon.png" rel="apple-touch-icon" />
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <div data-w-id="651a88ec-bcf0-0fee-3a42-7b24f72df7b4" class="top"></div>
