--- a/listing.html
+++ b/listing.html
@@ -137,8 +137,7 @@
     </script>
 
 
-    <link href="/images/favicon.png" rel="shortcut icon" type="image/x-icon" />
-    <link href="/images/app-icon.png" rel="apple-touch-icon" />
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <script>
       // Force the page to load at the top
       document.addEventListener("DOMContentLoaded", function() {
