--- a/pre-construction.html
+++ b/pre-construction.html
@@ -25,8 +25,7 @@
         n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
       }(window, document);
     </script>
-    <link href="/images/favicon.png" rel="shortcut icon" type="image/x-icon" />
-    <link href="/images/app-icon.png" rel="apple-touch-icon" />
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <script>
       document.addEventListener("DOMContentLoaded", function() {
         if ('scrollRestoration' in history) {
